--- a/project_1/index.html
+++ b/project_1/index.html
@@ -5,11 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script defer src="./script.js"></script>
 </head>
 <body>
     <header role="banner">
         <h1 class="game-title">Rock Paper Scissors</h1>
     </header>
+    <main role="main">
+        <section id="game-table">
+            <section class="play-section">
+                <section class="player">
+
+                </section>
+                <section class="npc">
+
+                </section>
+            </section>
+            <hr>
+            <section class="cards-section">
+
+            </section>
+        </section>
+        <section id="game-result">
+            <section id="result-section">
+                <h2 class="result"></h2>
+                <button class="play-again">Play again</button>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
