Add card draw and stop button functions -02

--- a/project_2/index.html
+++ b/project_2/index.html
@@ -15,13 +15,16 @@
         <section id="game-table">
             <section class="dealer">
                 <h2>Dealer</h2>
-                <p class="npc-score">0</p>
+                <section class="npc-card-section">
+
+                </section>
+                <p class="npc-score"></p>
             </section>
             <hr>
             <section class="player">
                 <h2>Player</h2>
-                <p class="player-score">0</p>
-                <section class="card-section">
+                <p class="player-score"></p>
+                <section class="player-card-section">
 
                 </section>
                 <section class="player-buttons">
