Add clearinterval on resetting the game -04

--- a/project_4/index.html
+++ b/project_4/index.html
@@ -8,9 +8,12 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
+    <p class="timer"></p>
     <main id="game-area">
-        <p class="timer"></p>
-        <div class="player"></div>
     </main>
+    <footer>
+        <h2 class="result"></h2>
+        <button class="play-again">Play again</button>
+    </footer>
 </body>
 </html>
