Add event logs -02

--- a/project_2/index.html
+++ b/project_2/index.html
@@ -15,10 +15,10 @@
         <section id="game-table">
             <section class="dealer">
                 <h2>Dealer</h2>
+                <p class="npc-score"></p>
                 <section class="npc-card-section">
 
                 </section>
-                <p class="npc-score"></p>
             </section>
             <hr>
             <section class="player">
@@ -38,6 +38,9 @@
                 <h2 class="result"></h2>
                 <button class="play-again">Play again</button>
             </section>
+        </section>
+        <section id="log">
+
         </section>
     </main>
 </body>
